Mon Jan 14 02:21:22 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: unify IntegerLiteralNode
	  and CharacterLiteralNode.

	* net/loveruby/cflat/compiler/Visitor.java: ditto.

	* net/loveruby/cflat/compiler/CodeGenerator.java: ditto.

	* net/loveruby/cflat/compiler/TypeResolver.java: ditto.

	* net/loveruby/cflat/ast/ASTVisitor.java: ditto.

	* net/loveruby/cflat/ast/CharacterLiteralNode.java: removed.

	* net/loveruby/cflat/ast/IntegerLiteralNode.java: show typeNode
	  member.

Sun Jan 13 08:13:44 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java (parseFile): report
	  errors if it is not a syntax error.

	* net/loveruby/cflat/parser/Parser.jj: declare SyntaxException and
	  FileException separately.

Sun Jan 13 07:54:02 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java: new option
	  --debug-parser.

	* net/loveruby/cflat/parser/Parser.jj: dump parsing process using
	  JavaCC's tracing function.

Sun Jan 13 06:52:52 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/DereferenceChecker.java: throw
	  SemanticError on invalid expr and catch it on each statement.

	* test/test3.cb: make compilable.

	* test/aref-semcheck2.cb: test nested invalid expr.

	* test/test.sh: run aref-semcheck2.cb.

Sun Jan 13 05:20:59 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/type/ArrayType.java (size): returns pointer
	  size if the type is not allocated.

	* test/test.sh: test integer.cb.

	* test/test.sh: test initializer.cb.

	* test/test.sh: test test2.cb.

	* test/test.sh: test test3.cb.

	* test/test.sh: test test4.cb.

	* test/test2.cb: long long is not supported now.

	* test/test4.cb: f -> main to make compilable.

	* test/list-untested.rb: new tool.

Sun Jan 13 04:48:28 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeChecker.java: fork
	  DereferenceChecker, to reduce catch(SemanticError).
